--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Roboto", sans-serif;
-  background-color: #0f103f;
+  background-color: #0f103f !important;
   color: #fff;
 }
 
