--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,3 +33,8 @@ a {
   border-right: none !important;
   box-shadow: 2px 0px 10px -1px rgba(12, 18, 24, 0.75) !important;
 }
+
+.css-1l8j5k8 {
+  border-right: none !important;
+  box-shadow: 2px 0px 10px -1px rgba(12, 18, 24, 0.75) !important;
+}
