--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,3 +39,49 @@ a {
   border-right: none !important;
   box-shadow: 2px 0px 10px -1px rgba(12, 18, 24, 0.75) !important;
 }
+.css-12i7wg6-MuiPaper-root-MuiDrawer-paper {
+  background-color: transparent;
+}
+.flex {
+  display: flex;
+  align-items: center;
+}
+
+.flex.fill {
+  height: 100%;
+}
+
+.flex.center {
+  justify-content: center;
+}
+
+.c {
+  position: absolute;
+  top: 200px;
+  max-width: 500px;
+  max-height: 500px;
+  width: 350px;
+  height: 200px;
+  cursor: pointer;
+  will-change: transform, opacity;
+}
+
+.front,
+.back {
+  background-size: cover;
+}
+
+.back {
+  background-image: url("/img1.png");
+}
+
+.front {
+  background-image: url(https://images.unsplash.com/photo-1540206395-68808572332f?ixlib=rb-1.2.1&w=1181&q=80&auto=format&fit=crop);
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  justify-content: center;
+}
