--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,7 +40,7 @@ a {
   box-shadow: 2px 0px 10px -1px rgba(12, 18, 24, 0.75) !important;
 }
 .css-12i7wg6-MuiPaper-root-MuiDrawer-paper {
-  background-color: transparent;
+  background-color: transparent !important;
 }
 .flex {
   display: flex;
@@ -84,4 +84,7 @@ a {
   align-items: center;
   height: 100%;
   justify-content: center;
+}
+.MuiDrawer-paper .MuiDrawer-paperAnchorLeft .MuiDrawer-paperAnchorDockedLeft {
+  background-color: transparent !important;
 }
