--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,9 +39,9 @@ a {
   border-right: none !important;
   box-shadow: 2px 0px 10px -1px rgba(12, 18, 24, 0.75) !important;
 }
-.css-12i7wg6-MuiPaper-root-MuiDrawer-paper {
+/* .css-12i7wg6-MuiPaper-root-MuiDrawer-paper {
   background-color: transparent !important;
-}
+} */
 .flex {
   display: flex;
   align-items: center;
